configuring for heroku

--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -7,8 +7,8 @@
 
 <h4>Interesting facts</h4>
 <ul>
-  <li>Watches LSU football </li>
-  <li>Likes national beer day </li>
+  <li>I am a 2LT in the LARNG </li>
+  <li>I am from Colorado and the Broncos are my favorite football team </li>
 </ul>
 
 {% endblock content %}
