update about html

--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -7,7 +7,7 @@
 
 <h4>Interesting facts</h4>
 <ul>
-  <li>I am a 2LT in the LARNG </li>
+  <li>I am a 2LT in the Louisiana Army National Guard </li>
   <li>I am from Colorado and the Broncos are my favorite football team </li>
 </ul>
 
